tests/purs/failing/2874-forall2.out
Error found:
at tests/purs/failing/2874-forall2.purs:5:12 - 5:18 (line 5, column 12 - line 5, column 18)

  Unable to parse module:
  Unexpected token 'forall'


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

